--- a/Caitlyn/Caitlyn.csproj
+++ b/Caitlyn/Caitlyn.csproj
@@ -52,7 +52,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,11 +61,9 @@
   <ItemGroup>
     <Compile Include="Common\DamageCalculate.cs" />
     <Compile Include="Common\DamageIndicator.cs" />
-    <Compile Include="Common\ExterienceManager.cs" />
+    <Compile Include="Common\Distance.cs" />
     <Compile Include="Common\Geometry.cs" />
-    <Compile Include="Common\Geometrys.cs" />
     <Compile Include="Common\Manager.cs" />
-    <Compile Include="Common\YasuoCollsion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\AutoLevel.cs" />
