--- a/TW.Common/TW.Common.csproj
+++ b/TW.Common/TW.Common.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -69,11 +71,36 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alerter.cs" />
+    <Compile Include="AntiGapcloser.cs" />
+    <Compile Include="AutoLevel.cs" />
+    <Compile Include="BetterWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Config.cs" />
     <Compile Include="CustomEvents.cs" />
+    <Compile Include="CustomizableAntiGapcloser.cs" />
+    <Compile Include="Damage.cs" />
     <Compile Include="Dash.cs" />
-    <Compile Include="Extensions\Vector2Extensions.cs" />
-    <Compile Include="Extensions\Vector3Extensions.cs" />
+    <Compile Include="Data\ItemData.cs" />
+    <Compile Include="Data\MasteryData.cs" />
+    <Compile Include="Data\SpellDatabase.cs" />
+    <Compile Include="DrawMin.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\VectorExtensions.cs" />
+    <Compile Include="FakeClicks.cs" />
+    <Compile Include="GamePacket.cs" />
+    <Compile Include="Geometry.cs" />
+    <Compile Include="Hacks.cs" />
+    <Compile Include="HealthPrediction.cs" />
+    <Compile Include="HeroManager.cs" />
+    <Compile Include="Interrupter.cs" />
+    <Compile Include="Interrupter2.cs" />
+    <Compile Include="Items.cs" />
+    <Compile Include="LastCastedSpell.cs" />
+    <Compile Include="MapPositions.cs" />
+    <Compile Include="MEC.cs" />
+    <Compile Include="MenuWrapper.cs" />
     <Compile Include="Menu\Circle.cs" />
     <Compile Include="Menu\ColorPicker.cs" />
     <Compile Include="Menu\CommonMenu.cs" />
@@ -93,10 +120,16 @@
     <Compile Include="Menu\Slider.cs" />
     <Compile Include="Menu\StringList.cs" />
     <Compile Include="Menu\WndEventComposition.cs" />
+    <Compile Include="MinionManager.cs" />
     <Compile Include="MultiLanguage.cs" />
     <Compile Include="Notifications.cs" />
     <Compile Include="Notifications\INotification.cs" />
     <Compile Include="Notifications\Notification.cs" />
+    <Compile Include="ObjectHandler.cs" />
+    <Compile Include="Orbwalking.cs" />
+    <Compile Include="Packet.cs" />
+    <Compile Include="PermaShow.cs" />
+    <Compile Include="Prediction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -109,6 +142,11 @@
       <DependentUpon>Translations.resx</DependentUpon>
     </Compile>
     <Compile Include="Render.cs" />
+    <Compile Include="Shared.cs" />
+    <Compile Include="Spell.cs" />
+    <Compile Include="TargetSelector\DamageType.cs" />
+    <Compile Include="TargetSelector\TargetingMode.cs" />
+    <Compile Include="TargetSelector\TargetSelector.cs" />
     <Compile Include="ThirdParty\Clipper.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Utils\Cursor.cs" />
@@ -124,9 +162,7 @@
     <Compile Include="Utils\WeightedRandom.cs" />
     <Compile Include="Utils\WindowsMessages.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TargetSelector\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
