--- a/TW.Common/TW.Common.csproj
+++ b/TW.Common/TW.Common.csproj
@@ -87,6 +87,11 @@
     <Compile Include="Data\SpellDatabase.cs" />
     <Compile Include="DrawMin.cs" />
     <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\FloatExtensions.cs" />
+    <Compile Include="Extensions\HeroName.cs" />
+    <Compile Include="Extensions\IntegerExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\TextExtensions.cs" />
     <Compile Include="Extensions\VectorExtensions.cs" />
     <Compile Include="FakeClicks.cs" />
     <Compile Include="GamePacket.cs" />
@@ -121,7 +126,6 @@
     <Compile Include="Menu\StringList.cs" />
     <Compile Include="Menu\WndEventComposition.cs" />
     <Compile Include="MinionManager.cs" />
-    <Compile Include="MultiLanguage.cs" />
     <Compile Include="Notifications.cs" />
     <Compile Include="Notifications\INotification.cs" />
     <Compile Include="Notifications\Notification.cs" />
@@ -135,11 +139,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Translations.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Translations.resx</DependentUpon>
     </Compile>
     <Compile Include="Render.cs" />
     <Compile Include="Shared.cs" />
@@ -168,10 +167,6 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Translations.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Translations.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
